--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sigh-bify",
-  "version": "0.0.1-b",
+  "version": "0.0.1-c",
   "description": "sigh-plugin for browserify.",
   "main": "lib",
   "keywords": [
@@ -9,21 +9,35 @@
   "license": "Beerware",
   "dependencies": {
     "lodash": "*",
-    "bluebird": "^2.9.24",
+    "bluebird": "^3.1.1",
     "convert-source-map": "^1.1.2",
-    "sigh-core": "^0.11.4"
+    "sigh-core": "*"
   },
   "peerDependencies": {
     "browserify": "*"
   },
   "devDependencies": {
-    "babel": "^5.2.9",
-    "chai": "^2.3.0",
+    "babel": "5",
+    "chai": "^3.4.1",
     "mocha": "^2.2.4",
     "sigh": "^0.12.7",
     "sigh-babel": "^0.11.0",
     "sigh-mocha": "^0.1.0",
-    "source-map": "^0.4.2",
-    "source-map-support": "^0.2.10"
-  }
+    "source-map": "^0.5.3",
+    "source-map-support": "^0.4.0"
+  },
+  "directories": {
+    "example": "example"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/unlight/sigh-bify.git"
+  },
+  "bugs": {
+    "url": "https://github.com/unlight/sigh-bify/issues"
+  },
+  "homepage": "https://github.com/unlight/sigh-bify#readme"
 }
